@@ -4,6 +4,8 @@
         Admin interface
         Nodes missing metadata interface
         Moderation support (based on Wiki::Toolkit moderation)
+        Search::InvertedIndex support is deprecated as of this release.
+          Please upgrade to Plucene if you are still using it.
 
 0.56    14 June 2006
         Fix bug introduced in feed formatting where Atom feeds would be
